updated minor changes